Changes for 1.8 Java